--- a/Nesting/index.html
+++ b/Nesting/index.html
@@ -562,10 +562,10 @@
     <div class="itc-slider__wrapper">
       <div class="itc-slider__items">
         <div class="itc-slider__item">
-          <a class="glightbox" href="/images/CNC3.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading=lazy src="/images/CNC3.jpg"></a>
+          <a class="glightbox" href="./images/CNC3.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading=lazy src="./images/CNC3.jpg"></a>
         </div>
         <div class="itc-slider__item">
-          <a class="glightbox" href="/images/6MB.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading=lazy src="/images/6MB.jpg"></a>
+          <a class="glightbox" href="./images/6MB.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading=lazy src="./images/6MB.jpg"></a>
         </div>
       </div>
     </div>
