--- a/Nesting/index.html
+++ b/Nesting/index.html
@@ -577,7 +577,7 @@
 
 <h2 id="_1">Эксплуатация</h2>
 <figure markdown>
-<iframe width="700" height="393,75" src="https://www.youtube.com/embed/JcDfbs4DmLQ?si=X36kNSOaYqBpQQd_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="700" height="393,75" src="https://www.youtube.com/watch?v=lS1k_7Ozp2o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </figure>
 
 <h2 id="_2">Инструкции</h2>
@@ -739,7 +739,7 @@
 <li><a href="../Syntec_test.con">Постпроцессор для стойки Syntec 60W-E и 6MD под ArtCam 2018 со сменой инструмента</a></li>
 <li><a href="../%D0%91%D0%B0%D0%B7%D0%B0%20%D0%B8%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BC%D0%B5%D0%BD%D1%82%20ArtCAM%202018.tdb">База инструмента ArtCAM 2018</a></li>
 <li>Подпрограммы инструментов<ul>
-<li><a href="../Tools%206MD.rar">6MD</a></li>
+<li><a href="../Tools%206MD.rar">6MB</a></li>
 <li><a href="../Tools%2060W-E.rar">60W-E</a></li>
 </ul>
 </li>
