--- a/Nesting/index.html
+++ b/Nesting/index.html
@@ -577,7 +577,7 @@
 
 <h2 id="_1">Эксплуатация</h2>
 <figure markdown>
-<iframe width="700" height="393,75" src="https://www.youtube.com/watch?v=lS1k_7Ozp2o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="700" height="393,75" src="https://www.youtube.com/embed/lS1k_7Ozp2o?si=wtop_FCrCmOr6a6O" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </figure>
 
 <h2 id="_2">Инструкции</h2>
