--- a/HRB 28-29/index.html
+++ b/HRB 28-29/index.html
@@ -596,13 +596,13 @@
 </ul>
 </li>
 <li>Длина заготовки, мм<ul>
-<li>минимальная:</li>
-<li>максимальная:</li>
+<li>минимальная: 150</li>
+<li>максимальная: ???</li>
 </ul>
 </li>
 <li>Ширина заготовки, мм<ul>
-<li>минимальная:</li>
-<li>максимальная:</li>
+<li>минимальная: ???</li>
+<li>максимальная: ???</li>
 </ul>
 </li>
 </ul>
@@ -647,10 +647,17 @@
 
 
 
+  
+  
 
 
 
 
+
+
+<div class="corner-wrapper">
+    <script async src="https://comments.app/js/widget.js?3" data-comments-app-website="yfnN2Il_" data-limit="5" data-color="41474a" data-dislikes="1" data-colorful="1"></script>
+  </div>
 
                 
               </article>
