--- a/Biesse/index.html
+++ b/Biesse/index.html
@@ -606,11 +606,18 @@
 <p>Данные пользователя</p>
 <ul>
 <li>
-<p>XXX</p>
+<p>PMOD</p>
 <ul>
 <li>0 нижние шпиндели</li>
 <li>1 верхние шпиндели</li>
 <li>2 опозитная обработка</li>
+</ul>
+</li>
+<li>
+<p>NPAN</p>
+<ul>
+<li>1 выгрузка на стол загрузки</li>
+<li>2 выгрузка на стол разгрузки</li>
 </ul>
 </li>
 </ul>
@@ -627,10 +634,17 @@
 
 
 
+  
+  
 
 
 
 
+
+
+<div class="corner-wrapper">
+    <script async src="https://comments.app/js/widget.js?3" data-comments-app-website="yfnN2Il_" data-limit="5" data-color="41474a" data-dislikes="1" data-colorful="1"></script>
+  </div>
 
                 
               </article>
