--- a/Weeke/index.html
+++ b/Weeke/index.html
@@ -588,10 +588,17 @@
 
 
 
+  
+  
 
 
 
 
+
+
+<div class="corner-wrapper">
+    <script async src="https://comments.app/js/widget.js?3" data-comments-app-website="yfnN2Il_" data-limit="5" data-color="41474a" data-dislikes="1" data-colorful="1"></script>
+  </div>
 
                 
               </article>
