--- a/Nesting/index.html
+++ b/Nesting/index.html
@@ -362,7 +362,7 @@
         
   
   <span class="md-ellipsis">
-    Hold HRB 28/29
+    HOLD Machinery HB 28/29
   </span>
   
 
@@ -641,6 +641,8 @@
 
 
 <h1 id="sudiao-sd-2128">SUDIAO SD-2128</h1>
+<p>Обрабатывающий центр для Нестинга </p>
+<!-- (ЧПУ фрезер под нестинг со сверлильной головой) -->
 <style>
     *,
     *::before,
