--- a/Biesse/index.html
+++ b/Biesse/index.html
@@ -624,7 +624,7 @@
 
 <h1 id="biesse-skipper-100">Biesse Skipper 100</h1>
 <p><a class="glightbox" href="../592_n_biesse_skipper_100_cover.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Alt text" src="../592_n_biesse_skipper_100_cover.png" /></a>
-Сверлильно-присадочный обрабатывающий центр с ЧПУ SKIPPER 100 является станком для высококачественной, точной присадки изделий из плитного материала ЛДСП, МДФ. Станок оборудован двумя рабочими присадочными группами – нижней и верхней, имеющими в общей сложности 78 автономных инструментальных шпинделей. Станок может производить одновременную обработку двух панелей, причем, и сверху, и снизу в рамках одного рабочего цикла.</p>
+Обрабатывающий центр SKIPPER 100 является станком для высококачественной, точной присадки изделий из плитного материала ЛДСП, МДФ. Станок оборудован двумя рабочими присадочными группами – нижней и верхней, имеющими в общей сложности 78 автономных инструментальных шпинделей. Станок может производить одновременную обработку двух панелей, причем, и сверху, и снизу в рамках одного рабочего цикла.</p>
 <h2 id="_1">Характеристики</h2>
 <table>
 <thead>
