--- a/Nesting/index.html
+++ b/Nesting/index.html
@@ -794,7 +794,7 @@
 
 
 <h1 id="sudiao-sd-2128">SUDIAO SD 2128</h1>
-<p>Обрабатывающий центр для нестинга (ЧПУ фрезер под нестинг со сверлильной головой)
+<p>Фрезерный станок с ЧПУ для нестинга со сверлильным блоком
 <br />
 <style>
     *,
@@ -820,7 +820,7 @@
       flex: 0 0 100%;
       max-width: 100%;
       counter-increment: slide;
-      height: 500px;
+      height: auto;
       position: relative;
     }
 </style>
