--- a/SD2516/index.html
+++ b/SD2516/index.html
@@ -766,11 +766,9 @@
 <h2 id="_1">Фрезы</h2>
 <p>双头开料刀5A钨钢合金铣刀头实 木单刃螺旋铣刀数控雕刻刀木</p>
 <h3 id="fr8-8x130x200">FR8 8x130x200</h3>
-<p>Материал: сплав из вольфрамовой стали 5A
-<a class="glightbox" href="../images/fr8 sd2516.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading=lazy src="../images/fr8 sd2516.jpg"></a></p>
+<p><a class="glightbox" href="../images/fr8 sd2516.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading=lazy src="../images/fr8 sd2516.jpg"></a></p>
 <h3 id="fr6-6x6x80x150lx1t">FR6 6x6x80x150Lx1T</h3>
-<p>Материал: Цементированный карбид
-<a class="glightbox" href="../images/fr6 sd2516.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading=lazy src="../images/fr6 sd2516.jpg"></a></p>
+<p><a class="glightbox" href="../images/fr6 sd2516.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading=lazy src="../images/fr6 sd2516.jpg"></a></p>
 <h2 id="_2">Инструкции</h2>
 <ul>
 <li><a href="../Documentation/Forwin%20Woodworking%20Drilling%20and%20Cutting%20Control%20Software%20Brochure%20%281%29%20%281%29.htm" target="_blank">CNEXT-Woodworking Drilling and Cutting Software Manual</a> <a href="../files/Forwin%20Woodworking%20Drilling%20and%20Cutting%20Control%20Software%20Brochure%20%281%29.docx" target="_blank">[alt]</a></li>
