--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -370,22 +370,23 @@
 
 <h1 id="_1">Документация</h1>
 <ul>
-<li><a href="%D0%9D%D0%B0%D0%B4%D0%BF%D0%B8%D1%81%D1%8C_%D0%BD%D0%B0_%D0%BF%D0%B0%D0%BF%D0%BA%D1%83.doc">Титульный лист папки</a></li>
-</ul>
-<h1 id="_2">Документация для запуска</h1>
-<ol>
 <li>
-<p>инструкция (mv_kossovo@mail.ru в архиве, формат файла .tif, каждая страница отдельным файлом)</p>
+<p><a href="%D0%9D%D0%B0%D0%B4%D0%BF%D0%B8%D1%81%D1%8C_%D0%BD%D0%B0_%D0%BF%D0%B0%D0%BF%D0%BA%D1%83.doc">Титульный лист папки</a></p>
 </li>
 <li>
-<p>спецификация на фурнитуру:</p>
-<ul>
-<li>Фурнитура Барановичи (adamkovich.leha@yandex.ru, маркетинг, ОТК, гарантийный отдел, цех  и в папку)</li>
-<li>Фурнитура Коссово (Маркетинг, ОТК, гарантийный отдел, цех и в папку)</li>
-</ul>
+<p><a href="tp-tc-025-2012.pdf">ТП ТС 025/2012</a></p>
 </li>
-</ol>
-<h2 id="_3">Образцы заявлений</h2>
+</ul>
+<!-- # Документация для запуска
+
+1. инструкция (mv_kossovo@mail.ru в архиве, формат файла .tif, каждая страница отдельным файлом)
+
+2. спецификация на фурнитуру:
+
+    * Фурнитура Барановичи (adamkovich.leha@yandex.ru, маркетинг, ОТК, гарантийный отдел, цех  и в папку)
+    * Фурнитура Коссово (Маркетинг, ОТК, гарантийный отдел, цех и в папку)
+  -->
+<!-- ## Образцы заявлений -->
 
 
 
