--- a/Machines/index.html
+++ b/Machines/index.html
@@ -781,16 +781,25 @@
   <h1>Станки</h1>
 
 <h2 id="_1">Наименование файлов и комментарии</h2>
-<p>УП группируются в папку с именем в формате (Вид Мебели / название / <del>номер</del> ).</p>
-<p>Пример: </p>
+<p>УП группируются в папку с именем в формате (Вид Мебели / название / <del>номер</del> ). </p>
+<p><div class="language-py highlight"><span class="filename">Пример для BHC350</span><pre><span></span><code><span id="__span-0-1"><a id="__codelineno-0-1" name="__codelineno-0-1" href="#__codelineno-0-1"></a><span class="n">DK_Citi_Lux</span>
+</span></code></pre></div>
+<div class="language-py highlight"><span class="filename">Пример для Skipper 100</span><pre><span></span><code><span id="__span-1-1"><a id="__codelineno-1-1" name="__codelineno-1-1" href="#__codelineno-1-1"></a><span class="n">Стол</span> <span class="n">письменный</span> <span class="n">Keln</span> <span class="mi">2</span><span class="n">D2S</span>
+</span></code></pre></div></p>
 <p>Имя файла должно содержать:</p>
 <ul>
 <li>наименование детали</li>
 <li>размеры заготовки</li>
 <li><del>номер чертежа</del></li>
 </ul>
+<p><div class="language-py highlight"><span class="filename">Пример для BHC350</span><pre><span></span><code><span id="__span-2-1"><a id="__codelineno-2-1" name="__codelineno-2-1" href="#__codelineno-2-1"></a><span class="n">karkas_spinki_1850x655</span><span class="o">.</span><span class="n">mpr</span>
+</span></code></pre></div>
+<div class="language-py highlight"><span class="filename">Пример для Skipper 100</span><pre><span></span><code><span id="__span-3-1"><a id="__codelineno-3-1" name="__codelineno-3-1" href="#__codelineno-3-1"></a><span class="n">Боковина</span> <span class="n">тумбы</span> <span class="n">внутренняя</span> <span class="n">левая</span> <span class="mi">195</span><span class="n">х250</span><span class="o">.</span><span class="n">bpp</span>
+</span></code></pre></div></p>
 <h3 id="sd-2128">Для SD 2128:</h3>
 <p>УП группируются в папку с именем в формате (Вид Мебели/название/номер).</p>
+<div class="language-py highlight"><span class="filename">Пример названия папки</span><pre><span></span><code><span id="__span-4-1"><a id="__codelineno-4-1" name="__codelineno-4-1" href="#__codelineno-4-1"></a><span class="n">stul</span> <span class="n">boss</span> <span class="n">barny</span>
+</span></code></pre></div>
 <ol>
 <li>
 <p>Имя файла <span class="twemoji" title="Имя файла УП должно быть &lt;31 символа и не должно содержать кириллицу (с расширением .cnc лимит 27 символов)"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 0 0 2 12a10 10 0 0 0 10 10 10 10 0 0 0 10-10A10 10 0 0 0 12 2m-1 15h2v-6h-2v6Z"/></svg></span> должно содержать сокращенное :</p>
@@ -802,13 +811,22 @@
 <li><del>номер чертежа</del></li>
 </ol>
 </li>
-<li>
-<p>Комментарий (первая строка УП) дублирует название УП</p>
-</li>
 </ol>
+<div class="language-py highlight"><span class="filename">Пример названия файла 1</span><pre><span></span><code><span id="__span-5-1"><a id="__codelineno-5-1" name="__codelineno-5-1" href="#__codelineno-5-1"></a><span class="n">boss</span> <span class="n">barny</span> <span class="n">spin1</span> <span class="n">dvp</span><span class="o">.</span><span class="n">cnc</span>
+</span></code></pre></div>
+<p><div class="language-py highlight"><span class="filename">Пример названия файла 2</span><pre><span></span><code><span id="__span-6-1"><a id="__codelineno-6-1" name="__codelineno-6-1" href="#__codelineno-6-1"></a><span class="n">SID82</span><span class="o">.</span><span class="n">CNC</span>
+</span></code></pre></div>
+2. Комментарий (первая строка УП) дублирует название УП</p>
+<div class="language-py highlight"><span class="filename">Пример комментария 1</span><pre><span></span><code><span id="__span-7-1"><a id="__codelineno-7-1" name="__codelineno-7-1" href="#__codelineno-7-1"></a><span class="p">(</span><span class="n">boss</span> <span class="n">barny</span> <span class="n">spin1</span> <span class="n">dvp</span><span class="p">)</span>
+</span></code></pre></div>
+<div class="language-py highlight"><span class="filename">Пример комментария 2</span><pre><span></span><code><span id="__span-8-1"><a id="__codelineno-8-1" name="__codelineno-8-1" href="#__codelineno-8-1"></a><span class="p">(</span><span class="n">Fan12</span> <span class="n">sid</span> <span class="n">boss</span><span class="o">/</span><span class="n">boss</span> <span class="n">barny</span><span class="o">+</span><span class="n">loft</span> <span class="n">barny</span> <span class="mi">350</span><span class="n">MM</span><span class="p">)</span>
+</span></code></pre></div>
 <h3 id="5">Для 5:</h3>
-<p>Стандартные размеры листов:</p>
-<p>!!!таблица!!!</p>
+<ul>
+<li>Имя файла должно сожержать размеры заготовки.</li>
+</ul>
+<div class="language-py highlight"><span class="filename">Пример</span><pre><span></span><code><span id="__span-9-1"><a id="__codelineno-9-1" name="__codelineno-9-1" href="#__codelineno-9-1"></a><span class="mi">1250</span><span class="n">x745</span><span class="o">.</span><span class="n">tap</span>
+</span></code></pre></div>
 <h2 id="sv8">SV8</h2>
 <details class="abstract">
 <summary>Спойлер</summary>
