--- a/SD2516/index.html
+++ b/SD2516/index.html
@@ -1033,6 +1033,7 @@
 <h2 id="_5">Файлы</h2>
 <ul>
 <li><a href="https://disk.yandex.by/d/N-k5oSBQlVVrCQ" target="_blank">CutWood-CAM</a></li>
+<li><a href="../Documentation/SD2516%20%20%E5%A4%9A%E5%B1%82%E7%94%B5%E8%B7%AF%E5%9B%BE.zip" target="_blank">Схемы</a></li>
 </ul>
 <h2 id="_6">Инструкции</h2>
 <ul>
