--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -561,6 +561,9 @@
 <li>
 <p><a href="tp-tc-025-2012.pdf" target="_blank">ТП ТС 025/2012</a></p>
 </li>
+<li>
+<p><a href="/docs/Documentation/Координаты%20стола+№%20шпинделя.docx" target="_blank">Шаблон координаты стола + № шпинделя</a></p>
+</li>
 </ul>
 <!-- # Документация для запуска
 
