--- a/SD2516/index.html
+++ b/SD2516/index.html
@@ -924,7 +924,7 @@
 <li>Нельзя делать глухие отверстия и пазы</li>
 <li>Для зажимной цанги необходимо оставлять минимум 50 мм листа</li>
 <li>Множество ограничений по расположению деталей</li>
-<li>Сломанный интерфейс версии CutWoodCam для windows</li>
+<li><del>Сломанный интерфейс версии CutWoodCam для windows</del></li>
 </ol>
 <h2 id="_3">Фрезы</h2>
 <p>双头开料刀5A钨钢合金铣刀头实 木单刃螺旋铣刀数控雕刻刀木</p>
@@ -988,8 +988,9 @@
 
 <h2 id="_5">Файлы</h2>
 <ul>
-<li><a href="https://disk.yandex.by/d/N-k5oSBQlVVrCQ" target="_blank">CutWood-CAM</a></li>
+<li><a href="https://disk.yandex.by/d/Ddc4Tl1OMz-idw" target="_blank">CutWood-CAM 09.09.24</a> <a href="https://disk.yandex.by/d/N-k5oSBQlVVrCQ" target="_blank">old</a></li>
 <li><a href="../Documentation/SD2516%20%20%E5%A4%9A%E5%B1%82%E7%94%B5%E8%B7%AF%E5%9B%BE.zip" target="_blank">Схемы</a></li>
+<li><a href="../files/sd2516tool.xml" target="_blank">База инструмента CutWoodCam</a></li>
 </ul>
 <h2 id="_6">Инструкции</h2>
 <ul>
