--- a/Machines/index.html
+++ b/Machines/index.html
@@ -797,7 +797,7 @@
 <div class="language-py highlight"><span class="filename">Пример для Skipper 100</span><pre><span></span><code><span id="__span-3-1"><a id="__codelineno-3-1" name="__codelineno-3-1" href="#__codelineno-3-1"></a><span class="n">Боковина</span> <span class="n">тумбы</span> <span class="n">внутренняя</span> <span class="n">левая</span> <span class="mi">195</span><span class="n">х250</span><span class="o">.</span><span class="n">bpp</span>
 </span></code></pre></div></p>
 <h3 id="sd-2128">Для SD 2128:</h3>
-<p>УП группируются в папку с именем в формате (Вид Мебели/название/номер).</p>
+<p>УП группируются в папку с именем в формате (Вид Мебели/название/<del>номер</del>).</p>
 <div class="language-py highlight"><span class="filename">Пример названия папки</span><pre><span></span><code><span id="__span-4-1"><a id="__codelineno-4-1" name="__codelineno-4-1" href="#__codelineno-4-1"></a><span class="n">stul</span> <span class="n">boss</span> <span class="n">barny</span>
 </span></code></pre></div>
 <ol>
@@ -823,7 +823,7 @@
 </span></code></pre></div>
 <h3 id="5">Для 5:</h3>
 <ul>
-<li>Имя файла должно сожержать размеры заготовки.</li>
+<li>Имя файла должно содержать размеры заготовки.</li>
 </ul>
 <div class="language-py highlight"><span class="filename">Пример</span><pre><span></span><code><span id="__span-9-1"><a id="__codelineno-9-1" name="__codelineno-9-1" href="#__codelineno-9-1"></a><span class="mi">1250</span><span class="n">x745</span><span class="o">.</span><span class="n">tap</span>
 </span></code></pre></div>
