--- a/BF-550/index.html
+++ b/BF-550/index.html
@@ -731,8 +731,8 @@
                   
 
 
-<h1 id="bf-550">Упаковочная машина BF-550</h1>
-<p><a class="glightbox" href="../images/Упаковочная машина BF-550.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Alt text" src="../images/Упаковочная машина BF-550.png" /></a></p>
+<div><h1 id="bf-550">Упаковочная машина BF-550</h1>
+<p><a class="glightbox" href="../images/%D0%A3%D0%BF%D0%B0%D0%BA%D0%BE%D0%B2%D0%BE%D1%87%D0%BD%D0%B0%D1%8F%20%D0%BC%D0%B0%D1%88%D0%B8%D0%BD%D0%B0%20BF-550.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Alt text" src="../images/%D0%A3%D0%BF%D0%B0%D0%BA%D0%BE%D0%B2%D0%BE%D1%87%D0%BD%D0%B0%D1%8F%20%D0%BC%D0%B0%D1%88%D0%B8%D0%BD%D0%B0%20BF-550.png"></a></p>
 <p>Упаковочная машина BF-550 - автоматическая упаковочная машина в термоусадочную плёнку, предназначена для упаковки мебели и других товаров. Состоит из упаковочной машины, обертывающей товар в плёнку и термотоннеля для термической усадки упаковочной плёнки. 
 Для размера изделия: Д: 905 * Ш: 400 * В: 15 мм, скорость упаковки около 10-12 уп/мин. 
 Для размера изделия: Д: 400 мм * Г: 32 мм, скорость упаковки около 20-22 уп/мин.</p>
@@ -758,10 +758,10 @@
 <li>Общий вес нетто – 1300кг, общий вес брутто – 1600кг.</li>
 </ul>
 <h1 id="_1">Термотоннель</h1>
-<p><a class="glightbox" href="../images/термотоннель.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Alt text" src="../images/термотоннель.jpg" width="300" /></a>
-<a class="glightbox" href="../images/Упаковочная машина BF-550-3.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Alt text" src="../images/Упаковочная машина BF-550-3.png" width="240" /></a></p>
+<p><a class="glightbox" href="../images/%D1%82%D0%B5%D1%80%D0%BC%D0%BE%D1%82%D0%BE%D0%BD%D0%BD%D0%B5%D0%BB%D1%8C.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Alt text" src="../images/%D1%82%D0%B5%D1%80%D0%BC%D0%BE%D1%82%D0%BE%D0%BD%D0%BD%D0%B5%D0%BB%D1%8C.jpg" width="300"></a>
+<a class="glightbox" href="../images/%D0%A3%D0%BF%D0%B0%D0%BA%D0%BE%D0%B2%D0%BE%D1%87%D0%BD%D0%B0%D1%8F%20%D0%BC%D0%B0%D1%88%D0%B8%D0%BD%D0%B0%20BF-550-3.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Alt text" src="../images/%D0%A3%D0%BF%D0%B0%D0%BA%D0%BE%D0%B2%D0%BE%D1%87%D0%BD%D0%B0%D1%8F%20%D0%BC%D0%B0%D1%88%D0%B8%D0%BD%D0%B0%20BF-550-3.png" width="240"></a></p>
 <p>Термотоннель является частью упаковочной машины BS-1150, которая поставляется в разобранном виде для удобства транспортировки</p>
-<p><a class="glightbox" href="../images/термотоннель2.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Alt text" src="../images/термотоннель2.jpg" width="600" /></a></p>
+<p><a class="glightbox" href="../images/%D1%82%D0%B5%D1%80%D0%BC%D0%BE%D1%82%D0%BE%D0%BD%D0%BD%D0%B5%D0%BB%D1%8C2.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Alt text" src="../images/%D1%82%D0%B5%D1%80%D0%BC%D0%BE%D1%82%D0%BE%D0%BD%D0%BD%D0%B5%D0%BB%D1%8C2.jpg" width="600"></a></p>
 <p>Упаковочная машина BS-1150 - автоматическая упаковочная машина в термоусадочную плёнку, предназначена для упаковки мебели и других товаров. Состоит из упаковочной машины, обертывающей товар в плёнку и термотоннеля для термической усадки упаковочной плёнки. 
 Система сварки и резки с подогревом при постоянной температуре может использоваться  для  запечатывания и резки термосвариваемых пленок различных промышленных стандартов, таких как PE и POF. Уплотнение прочное и красивое, особенно подходит для запечатывания и резки POF. </p>
 <p>Технические характеристики термотоннеля:</p>
@@ -789,7 +789,7 @@
 <li>Серийный номер: 2023032906/3, 2023032906/4</li>
 <li>Страна происхождения: Китай</li>
 <li>Общий вес нетто – 2660кг, общий вес брутто – 3400кг.</li>
-</ul>
+</ul></div>
 
 
 
