--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -553,7 +553,7 @@
                   
 
 
-<h1 id="_1">Документация</h1>
+<div><h1 id="_1">Документация</h1>
 <ul>
 <li>
 <p><a href="%D0%9D%D0%B0%D0%B4%D0%BF%D0%B8%D1%81%D1%8C_%D0%BD%D0%B0_%D0%BF%D0%B0%D0%BF%D0%BA%D1%83.doc" target="_blank">Титульный лист папки</a></p>
@@ -562,7 +562,7 @@
 <p><a href="tp-tc-025-2012.pdf" target="_blank">ТП ТС 025/2012</a></p>
 </li>
 <li>
-<p><a href="/docs/Documentation/Координаты%20стола+№%20шпинделя.docx" target="_blank">Шаблон координаты стола + № шпинделя</a></p>
+<p><a href="/docs/Documentation/%D0%9A%D0%BE%D0%BE%D1%80%D0%B4%D0%B8%D0%BD%D0%B0%D1%82%D1%8B%20%D1%81%D1%82%D0%BE%D0%BB%D0%B0+%E2%84%96%20%D1%88%D0%BF%D0%B8%D0%BD%D0%B4%D0%B5%D0%BB%D1%8F.docx" target="_blank">Шаблон координаты стола + № шпинделя</a></p>
 </li>
 </ul>
 <!-- # Документация для запуска
@@ -574,7 +574,7 @@
     * Фурнитура Барановичи (adamkovich.leha@yandex.ru, маркетинг, ОТК, гарантийный отдел, цех  и в папку)
     * Фурнитура Коссово (Маркетинг, ОТК, гарантийный отдел, цех и в папку)
   -->
-<!-- ## Образцы заявлений -->
+<!-- ## Образцы заявлений --></div>
 
 
 
