--- a/Hinge Machine RT-2/index.html
+++ b/Hinge Machine RT-2/index.html
@@ -783,10 +783,10 @@
 
   <h1>Hinge Machine RT 2</h1>
 
-<h2 id="_1">Инструкции</h2>
+<div><h2 id="_1">Инструкции</h2>
 <ul>
 <li><a href="../Hinge%20Machine%20RT-2%20Operate%20Instruction%20Manual.docx">Hinge Machine RT-2 Operate Instruction Manual</a></li>
-</ul>
+</ul></div>
 
 
 
