--- a/Nesting/index.html
+++ b/Nesting/index.html
@@ -979,9 +979,9 @@
                   
 
 
-<h1 id="sudiao-sd-2128">SUDIAO SD 2128</h1>
+<div><h1 id="sudiao-sd-2128">SUDIAO SD 2128</h1>
 <p>Трех осевой фрезерный станок с ЧПУ для нестинга со сверлильным блоком. 
-<br />
+<br>
 <style>
     *,
     *::before,
@@ -1017,13 +1017,13 @@
     <div class="itc-slider__wrapper">
       <div class="itc-slider__items">
         <div class="itc-slider__item">
-          <a class="glightbox" href="../images/CNC3.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading=lazy src="../images/CNC3.jpg"></a>
+          <a class="glightbox" href="../images/CNC3.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/CNC3.jpg"></a>
         </div>
         <div class="itc-slider__item">
-          <a class="glightbox" href="../images/6MB.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading=lazy src="../images/6MB.jpg"></a>
+          <a class="glightbox" href="../images/6MB.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/6MB.jpg"></a>
         </div>
         <div class="itc-slider__item">
-          <a class="glightbox" href="../images/60W-E.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading=lazy src="../images/60W-E.jpg"></a>
+          <a class="glightbox" href="../images/60W-E.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/60W-E.jpg"></a>
         </div>
       </div>
     </div>
@@ -1044,7 +1044,7 @@
 <h3 id="tool-wear-set">Регулировка глубины сверления Tool wear set</h3>
 <p>Tool wear set &gt; Lenghth(H) &gt; Geometry &gt; №шпинделя (чем больше минус тем глубже)</p>
 <figure>
-  <a class="glightbox" href="../images/sd2516/1725875073229.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Image title" src="../images/sd2516/1725875073229.jpg" width="300" /></a>
+  <a class="glightbox" href="../images/sd2516/1725875073229.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Image title" src="../images/sd2516/1725875073229.jpg" width="300"></a>
 </figure>
 <h3 id="_3">Схема стола</h3>
 <ul>
@@ -1053,7 +1053,7 @@
 <li>Малый стол G54P3=1525х1525</li>
 </ul>
 <figure>
-  <a class="glightbox" href="../images/stol_sd2128.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Схема стола" src="../images/stol_sd2128.jpg" width="300" /></a>
+  <a class="glightbox" href="../images/stol_sd2128.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Схема стола" src="../images/stol_sd2128.jpg" width="300"></a>
   <a href="../files/stol2128.frw" target="_blank">.frw</a>
 </figure>
 <h2 id="m-">M-коды</h2>
@@ -1423,8 +1423,8 @@
 </details>
 <h2 id="_4">Подпрограммы</h2>
 <ul>
-<li>M98 P1008 - смена инструмента на фрезу <span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m4.15 21.46 1.32-1.88A10.012 10.012 0 0 1 2 12 10 10 0 0 1 12 2c1.78 0 3.44.46 4.89 1.27l1.32-1.88 1.64 1.15-1.32 1.88C20.65 6.26 22 8.97 22 12a10 10 0 0 1-10 10c-1.78 0-3.44-.46-4.89-1.27l-1.32 1.88-1.64-1.15M12 4a8 8 0 0 0-8 8c0 2.35 1 4.46 2.63 5.93l9.1-13.01A7.921 7.921 0 0 0 12 4m0 16a8 8 0 0 0 8-8c0-2.35-1-4.46-2.63-5.93l-9.1 13.01c1.11.59 2.38.92 3.73.92Z"/></svg></span> 8 мм</li>
-<li>M98 P2008 - смена инструмента на сверло <span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m4.15 21.46 1.32-1.88A10.012 10.012 0 0 1 2 12 10 10 0 0 1 12 2c1.78 0 3.44.46 4.89 1.27l1.32-1.88 1.64 1.15-1.32 1.88C20.65 6.26 22 8.97 22 12a10 10 0 0 1-10 10c-1.78 0-3.44-.46-4.89-1.27l-1.32 1.88-1.64-1.15M12 4a8 8 0 0 0-8 8c0 2.35 1 4.46 2.63 5.93l9.1-13.01A7.921 7.921 0 0 0 12 4m0 16a8 8 0 0 0 8-8c0-2.35-1-4.46-2.63-5.93l-9.1 13.01c1.11.59 2.38.92 3.73.92Z"/></svg></span> 8 мм</li>
+<li>M98 P1008 - смена инструмента на фрезу <span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24"><path d="m4.15 21.46 1.32-1.88A10.012 10.012 0 0 1 2 12 10 10 0 0 1 12 2c1.78 0 3.44.46 4.89 1.27l1.32-1.88 1.64 1.15-1.32 1.88C20.65 6.26 22 8.97 22 12a10 10 0 0 1-10 10c-1.78 0-3.44-.46-4.89-1.27l-1.32 1.88-1.64-1.15M12 4a8 8 0 0 0-8 8c0 2.35 1 4.46 2.63 5.93l9.1-13.01A7.921 7.921 0 0 0 12 4m0 16a8 8 0 0 0 8-8c0-2.35-1-4.46-2.63-5.93l-9.1 13.01c1.11.59 2.38.92 3.73.92Z"></path></svg></span> 8 мм</li>
+<li>M98 P2008 - смена инструмента на сверло <span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24"><path d="m4.15 21.46 1.32-1.88A10.012 10.012 0 0 1 2 12 10 10 0 0 1 12 2c1.78 0 3.44.46 4.89 1.27l1.32-1.88 1.64 1.15-1.32 1.88C20.65 6.26 22 8.97 22 12a10 10 0 0 1-10 10c-1.78 0-3.44-.46-4.89-1.27l-1.32 1.88-1.64-1.15M12 4a8 8 0 0 0-8 8c0 2.35 1 4.46 2.63 5.93l9.1-13.01A7.921 7.921 0 0 0 12 4m0 16a8 8 0 0 0 8-8c0-2.35-1-4.46-2.63-5.93l-9.1 13.01c1.11.59 2.38.92 3.73.92Z"></path></svg></span> 8 мм</li>
 <li>M98 P0300 - обрезок M200, идет в конце перед M0 M200 и применяется когда изделие зафиксировано скобами</li>
 </ul>
 <h2 id="_5">Параметры</h2>
@@ -1464,7 +1464,7 @@
 <li><a href="../backup/system%20backup%20cnc3%2060we.rar">Backup cnc3 60we 2024</a>
 <link href="../stylesheets/itc-slider.css" rel="stylesheet"></li>
 </ul>
-<script src="../javascripts/itc-slider.js" defer=""></script>
+<script src="../javascripts/itc-slider.js" defer></script></div>
 
 
 
