--- a/RMZ-7D/index.html
+++ b/RMZ-7D/index.html
@@ -787,12 +787,108 @@
                   
 
 
-<h1 id="samach-rmz-7d">SAMACH RMZ 7D</h1>
+<div><h1 id="samach-rmz-7d">SAMACH RMZ 7D</h1>
 <p>Проходной сверлильно-присадочный станок</p>
+<style>
+    *,
+    *::before,
+    *::after {
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+    }
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+      'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+      'Segoe UI Symbol';
+    }
+    .container {
+      max-width: 700px;
+      margin: 0 auto;
+    }
+    .itc-slider__items {
+      counter-reset: slide;
+    }
+    .itc-slider__item {
+      flex: 0 0 100%;
+      max-width: 100%;
+      counter-increment: slide;
+      height: auto;
+      position: relative;
+    }
+</style>
+
+<div class="container">
+
+  <div class="itc-slider" data-slider="itc-slider" data-loop="false" data-autoplay="true">
+    <div class="itc-slider__wrapper">
+      <div class="itc-slider__items">
+        <div class="itc-slider__item">
+          <a class="glightbox" href="../images/rmz7d/1.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/rmz7d/1.jpg"></a>
+        </div>
+        <div class="itc-slider__item">
+          <a class="glightbox" href="../images/rmz7d/2.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/rmz7d/2.jpg"></a>
+        </div>
+        <div class="itc-slider__item">
+          <a class="glightbox" href="../images/rmz7d/3.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/rmz7d/3.jpg"></a>
+        </div>
+        <div class="itc-slider__item">
+          <a class="glightbox" href="../images/rmz7d/4.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/rmz7d/4.jpg"></a>
+        </div>
+        <div class="itc-slider__item">
+          <a class="glightbox" href="../images/rmz7d/5.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/rmz7d/5.jpg"></a>
+        </div>
+        <div class="itc-slider__item">
+          <a class="glightbox" href="../images/rmz7d/6.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/rmz7d/6.jpg"></a>
+        </div>
+        <div class="itc-slider__item">
+          <a class="glightbox" href="../images/rmz7d/7.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/rmz7d/7.jpg"></a>
+        </div>
+        <div class="itc-slider__item">
+          <a class="glightbox" href="../images/rmz7d/8.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/rmz7d/8.jpg"></a>
+        </div>
+        <div class="itc-slider__item">
+          <a class="glightbox" href="../images/rmz7d/9.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/rmz7d/9.jpg"></a>
+        </div>
+        <div class="itc-slider__item">
+          <a class="glightbox" href="../images/rmz7d/10.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/rmz7d/10.jpg"></a>
+        </div>
+        <div class="itc-slider__item">
+          <a class="glightbox" href="../images/rmz7d/11.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/rmz7d/11.jpg"></a>
+        </div>
+        <div class="itc-slider__item">
+          <a class="glightbox" href="../images/rmz7d/12.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/rmz7d/12.jpg"></a>
+        </div>
+        <div class="itc-slider__item">
+          <a class="glightbox" href="../images/rmz7d/13.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/rmz7d/13.jpg"></a>
+        </div>
+        <div class="itc-slider__item">
+          <a class="glightbox" href="../images/rmz7d/14.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/rmz7d/14.jpg"></a>
+        </div>
+        <div class="itc-slider__item">
+          <a class="glightbox" href="../images/rmz7d/15.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/rmz7d/15.jpg"></a>
+        </div>
+        <div class="itc-slider__item">
+          <a class="glightbox" href="../images/rmz7d/16.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/rmz7d/16.jpg"></a>
+        </div>
+        <div class="itc-slider__item">
+          <a class="glightbox" href="../images/rmz7d/17.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/rmz7d/17.jpg"></a>
+        </div>
+      </div>
+    </div>
+    <button class="itc-slider__btn itc-slider__btn_prev"></button>
+    <button class="itc-slider__btn itc-slider__btn_next"></button>
+  </div>
+
+</div>
+
+<p><div class="video-container"><iframe src="../images/rmz7d/18.mp4" style="position:relative;width:100%;height:22.172vw" frameborder="0" allowfullscreen alt="type:video"></iframe></div></p>
 <h2 id="_1">Файлы</h2>
 <ul>
 <li><a href="../files/TextLib_20240503_Ru2.xls">Языковой файл</a></li>
 </ul>
+<p><link href="../stylesheets/itc-slider.css" rel="stylesheet"></p>
+<script src="../javascripts/itc-slider.js" defer></script></div>
 
 
 
