--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                   
 
 
-<h1 id="_1">Главная</h1>
+<div><h1 id="_1">Главная</h1>
 <p>Добро пожаловать на неофициальный сайт тех отдела. Сайт сделан с помощью MkDocs и крутится на <a href="https://github.com/texmpo/texmpo" target="_blank">GitHub Pages</a>. Исходники лежат в приватном <a href="https://github.com/texmpo/texmpo-mkdocs" target="_blank">репозитории</a>.</p>
 <div class="admonition warning">
 <p class="admonition-title">Предупреждение</p>
@@ -602,8 +602,8 @@
 </div>
 <h2 id="material-for-mkdocs">Установка Material for MkDocs и дополнений</h2>
 <p>Material for MkDocs публикуется в виде пакета <a href="https://www.python.org/downloads/windows/" target="_blank">Python</a>. Откройте терминал и установите Material for MkDocs с помощью:
-<div class="language-yaml highlight"><span class="filename">Последняя версия</span><pre><span></span><code><span id="__span-0-1"><a id="__codelineno-0-1" name="__codelineno-0-1" href="#__codelineno-0-1"></a><span class="l l-Scalar l-Scalar-Plain">pip install mkdocs-material</span><span class="w"> </span><span class="c1"># (1)!</span>
-</span></code></pre></div></p>
+</p><div class="language-yaml highlight"><span class="filename">Последняя версия</span><pre><span></span><code><span id="__span-0-1"><a id="__codelineno-0-1" name="__codelineno-0-1" href="#__codelineno-0-1"></a><span class="l l-Scalar l-Scalar-Plain">pip install mkdocs-material</span><span class="w"> </span><span class="c1"># (1)!</span>
+</span></code></pre></div>
 <ol>
 <li>pip install mkdocs-material=="9.5.12" - выбор версии <br>pip show mkdocs-material - текущая версия </li>
 </ol>
@@ -627,7 +627,7 @@
 <li>
 <p><a href="https://squidfunk.github.io/mkdocs-material/reference/">Референсы</a></p>
 </li>
-</ul>
+</ul></div>
 
 
 
