--- a/5/index.html
+++ b/5/index.html
@@ -787,7 +787,7 @@
                   
 
 
-<h1 id="5-">5-ти шпиндельные фрезера</h1>
+<div><h1 id="5-">5-ти шпиндельные фрезера</h1>
 <ul>
 <li>
 <p>Ноль выставлен по центральному шпинделю        </p>
@@ -797,7 +797,7 @@
 </li>
 <li>
 <p>Плоскость безопасности для царг Y=-100, для планок Y=-300. В конце парковать на Y=-100 и Y=-300 соответственно.
-<a class="glightbox" href="../images/Sc03.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Alt text" src="../images/Sc03.png" /></a></p>
+<a class="glightbox" href="../images/Sc03.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Alt text" src="../images/Sc03.png"></a></p>
 </li>
 <li>
 <p>Постпроцессор Bostomatic</p>
@@ -809,7 +809,7 @@
 <h2 id="_1">Инструкции</h2>
 <ul>
 <li><a href="../Documentation/kontroller-dsp-0501-manual-rus.pdf">Руководство пользователя. Контролер DSP 0501</a></li>
-</ul>
+</ul></div>
 
 
 
