--- a/Biesse/index.html
+++ b/Biesse/index.html
@@ -889,8 +889,8 @@
                   
 
 
-<h1 id="biesse-skipper-100">BIESSE Skipper 100</h1>
-<p><a class="glightbox" href="../images/592_n_biesse_skipper_100_cover.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Alt text" src="../images/592_n_biesse_skipper_100_cover.png" /></a>
+<div><h1 id="biesse-skipper-100">BIESSE Skipper 100</h1>
+<p><a class="glightbox" href="../images/592_n_biesse_skipper_100_cover.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Alt text" src="../images/592_n_biesse_skipper_100_cover.png"></a>
 Обрабатывающий центр SKIPPER 100 является станком для высококачественной, точной присадки изделий из плитного материала ЛДСП, МДФ. Станок оборудован двумя рабочими присадочными группами – нижней и верхней, имеющими в общей сложности 78 автономных инструментальных шпинделей. Станок может производить одновременную обработку двух панелей, причем, и сверху, и снизу в рамках одного рабочего цикла.</p>
 <h2 id="_1">Характеристики</h2>
 <table>
@@ -951,10 +951,10 @@
 <h3 id="ttp">(TTP) Тип инструмента</h3>
 <ul>
 <li>
-<p><strong>NORMALE</strong> - «тупое/глухое» (для отверстий <span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m4.15 21.46 1.32-1.88A10.012 10.012 0 0 1 2 12 10 10 0 0 1 12 2c1.78 0 3.44.46 4.89 1.27l1.32-1.88 1.64 1.15-1.32 1.88C20.65 6.26 22 8.97 22 12a10 10 0 0 1-10 10c-1.78 0-3.44-.46-4.89-1.27l-1.32 1.88-1.64-1.15M12 4a8 8 0 0 0-8 8c0 2.35 1 4.46 2.63 5.93l9.1-13.01A7.921 7.921 0 0 0 12 4m0 16a8 8 0 0 0 8-8c0-2.35-1-4.46-2.63-5.93l-9.1 13.01c1.11.59 2.38.92 3.73.92Z"/></svg></span> 5-12 мм. На зажимах отверстия <span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m4.15 21.46 1.32-1.88A10.012 10.012 0 0 1 2 12 10 10 0 0 1 12 2c1.78 0 3.44.46 4.89 1.27l1.32-1.88 1.64 1.15-1.32 1.88C20.65 6.26 22 8.97 22 12a10 10 0 0 1-10 10c-1.78 0-3.44-.46-4.89-1.27l-1.32 1.88-1.64-1.15M12 4a8 8 0 0 0-8 8c0 2.35 1 4.46 2.63 5.93l9.1-13.01A7.921 7.921 0 0 0 12 4m0 16a8 8 0 0 0 8-8c0-2.35-1-4.46-2.63-5.93l-9.1 13.01c1.11.59 2.38.92 3.73.92Z"/></svg></span> 8 мм прописывают <span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m4.15 21.46 1.32-1.88A10.012 10.012 0 0 1 2 12 10 10 0 0 1 12 2c1.78 0 3.44.46 4.89 1.27l1.32-1.88 1.64 1.15-1.32 1.88C20.65 6.26 22 8.97 22 12a10 10 0 0 1-10 10c-1.78 0-3.44-.46-4.89-1.27l-1.32 1.88-1.64-1.15M12 4a8 8 0 0 0-8 8c0 2.35 1 4.46 2.63 5.93l9.1-13.01A7.921 7.921 0 0 0 12 4m0 16a8 8 0 0 0 8-8c0-2.35-1-4.46-2.63-5.93l-9.1 13.01c1.11.59 2.38.92 3.73.92Z"/></svg></span> 7 мм)</p>
+<p><strong>NORMALE</strong> - «тупое/глухое» (для отверстий <span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24"><path d="m4.15 21.46 1.32-1.88A10.012 10.012 0 0 1 2 12 10 10 0 0 1 12 2c1.78 0 3.44.46 4.89 1.27l1.32-1.88 1.64 1.15-1.32 1.88C20.65 6.26 22 8.97 22 12a10 10 0 0 1-10 10c-1.78 0-3.44-.46-4.89-1.27l-1.32 1.88-1.64-1.15M12 4a8 8 0 0 0-8 8c0 2.35 1 4.46 2.63 5.93l9.1-13.01A7.921 7.921 0 0 0 12 4m0 16a8 8 0 0 0 8-8c0-2.35-1-4.46-2.63-5.93l-9.1 13.01c1.11.59 2.38.92 3.73.92Z"></path></svg></span> 5-12 мм. На зажимах отверстия <span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24"><path d="m4.15 21.46 1.32-1.88A10.012 10.012 0 0 1 2 12 10 10 0 0 1 12 2c1.78 0 3.44.46 4.89 1.27l1.32-1.88 1.64 1.15-1.32 1.88C20.65 6.26 22 8.97 22 12a10 10 0 0 1-10 10c-1.78 0-3.44-.46-4.89-1.27l-1.32 1.88-1.64-1.15M12 4a8 8 0 0 0-8 8c0 2.35 1 4.46 2.63 5.93l9.1-13.01A7.921 7.921 0 0 0 12 4m0 16a8 8 0 0 0 8-8c0-2.35-1-4.46-2.63-5.93l-9.1 13.01c1.11.59 2.38.92 3.73.92Z"></path></svg></span> 8 мм прописывают <span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24"><path d="m4.15 21.46 1.32-1.88A10.012 10.012 0 0 1 2 12 10 10 0 0 1 12 2c1.78 0 3.44.46 4.89 1.27l1.32-1.88 1.64 1.15-1.32 1.88C20.65 6.26 22 8.97 22 12a10 10 0 0 1-10 10c-1.78 0-3.44-.46-4.89-1.27l-1.32 1.88-1.64-1.15M12 4a8 8 0 0 0-8 8c0 2.35 1 4.46 2.63 5.93l9.1-13.01A7.921 7.921 0 0 0 12 4m0 16a8 8 0 0 0 8-8c0-2.35-1-4.46-2.63-5.93l-9.1 13.01c1.11.59 2.38.92 3.73.92Z"></path></svg></span> 7 мм)</p>
 </li>
 <li>
-<p><strong>NORMALEG</strong> - «тупое/глухое» (для отверстий <span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m4.15 21.46 1.32-1.88A10.012 10.012 0 0 1 2 12 10 10 0 0 1 12 2c1.78 0 3.44.46 4.89 1.27l1.32-1.88 1.64 1.15-1.32 1.88C20.65 6.26 22 8.97 22 12a10 10 0 0 1-10 10c-1.78 0-3.44-.46-4.89-1.27l-1.32 1.88-1.64-1.15M12 4a8 8 0 0 0-8 8c0 2.35 1 4.46 2.63 5.93l9.1-13.01A7.921 7.921 0 0 0 12 4m0 16a8 8 0 0 0 8-8c0-2.35-1-4.46-2.63-5.93l-9.1 13.01c1.11.59 2.38.92 3.73.92Z"/></svg></span> 15, 20, 35 мм)</p>
+<p><strong>NORMALEG</strong> - «тупое/глухое» (для отверстий <span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24"><path d="m4.15 21.46 1.32-1.88A10.012 10.012 0 0 1 2 12 10 10 0 0 1 12 2c1.78 0 3.44.46 4.89 1.27l1.32-1.88 1.64 1.15-1.32 1.88C20.65 6.26 22 8.97 22 12a10 10 0 0 1-10 10c-1.78 0-3.44-.46-4.89-1.27l-1.32 1.88-1.64-1.15M12 4a8 8 0 0 0-8 8c0 2.35 1 4.46 2.63 5.93l9.1-13.01A7.921 7.921 0 0 0 12 4m0 16a8 8 0 0 0 8-8c0-2.35-1-4.46-2.63-5.93l-9.1 13.01c1.11.59 2.38.92 3.73.92Z"></path></svg></span> 15, 20, 35 мм)</p>
 </li>
 <li>
 <p><strong>LANCIA</strong> -  «острое/сквозное» (используется для наколок 8 x 1 мм) </p>
@@ -990,10 +990,10 @@
     <div class="itc-slider__wrapper">
       <div class="itc-slider__items">
         <div class="itc-slider__item">
-          <a class="glightbox" href="../images/Rover-software-Passw-ords-1.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading=lazy src="../images/Rover-software-Passw-ords-1.png"></a>
+          <a class="glightbox" href="../images/Rover-software-Passw-ords-1.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/Rover-software-Passw-ords-1.png"></a>
         </div>
         <div class="itc-slider__item">
-          <a class="glightbox" href="../images/Rover-software-Passw-ords-2.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading=lazy src="../images/Rover-software-Passw-ords-2.png"></a>
+          <a class="glightbox" href="../images/Rover-software-Passw-ords-2.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/Rover-software-Passw-ords-2.png"></a>
         </div>
       </div>
     </div>
@@ -1049,7 +1049,7 @@
 </style>
 
 <p><link href="../stylesheets/itc-slider.css" rel="stylesheet"></p>
-<script src="../javascripts/itc-slider.js" defer=""></script>
+<script src="../javascripts/itc-slider.js" defer></script></div>
 
 
 
