--- a/Weeke/index.html
+++ b/Weeke/index.html
@@ -835,12 +835,12 @@
                   
 
 
-<h1 id="weeke-bhc350-venture">WEEKE BHC350 / Venture</h1>
+<div><h1 id="weeke-bhc350-venture">WEEKE BHC350 / Venture</h1>
 <h2 id="_1">УП</h2>
 <h3 id="_2">Инструменты</h3>
 <ul>
 <li>
-<p>Наколки <span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m4.15 21.46 1.32-1.88A10.012 10.012 0 0 1 2 12 10 10 0 0 1 12 2c1.78 0 3.44.46 4.89 1.27l1.32-1.88 1.64 1.15-1.32 1.88C20.65 6.26 22 8.97 22 12a10 10 0 0 1-10 10c-1.78 0-3.44-.46-4.89-1.27l-1.32 1.88-1.64-1.15M12 4a8 8 0 0 0-8 8c0 2.35 1 4.46 2.63 5.93l9.1-13.01A7.921 7.921 0 0 0 12 4m0 16a8 8 0 0 0 8-8c0-2.35-1-4.46-2.63-5.93l-9.1 13.01c1.11.59 2.38.92 3.73.92Z"/></svg></span> 5,2 x 1 мм</p>
+<p>Наколки <span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24"><path d="m4.15 21.46 1.32-1.88A10.012 10.012 0 0 1 2 12 10 10 0 0 1 12 2c1.78 0 3.44.46 4.89 1.27l1.32-1.88 1.64 1.15-1.32 1.88C20.65 6.26 22 8.97 22 12a10 10 0 0 1-10 10c-1.78 0-3.44-.46-4.89-1.27l-1.32 1.88-1.64-1.15M12 4a8 8 0 0 0-8 8c0 2.35 1 4.46 2.63 5.93l9.1-13.01A7.921 7.921 0 0 0 12 4m0 16a8 8 0 0 0 8-8c0-2.35-1-4.46-2.63-5.93l-9.1 13.01c1.11.59 2.38.92 3.73.92Z"></path></svg></span> 5,2 x 1 мм</p>
 </li>
 <li>
 <p>Фреза &gt; Инструмент №140</p>
@@ -849,12 +849,12 @@
 <details class="warning">
 <summary>Предупреждение</summary>
 <p>При использовании функций "Отразить" и "Отражение по Y", отражается и сторона коррекции.
-<a class="glightbox" href="../images/Sc01.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Alt text" src="../images/Sc01.png" /></a> <a class="glightbox" href="../images/Sc02.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Alt text" src="../images/Sc02.png" /></a></p>
+<a class="glightbox" href="../images/Sc01.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Alt text" src="../images/Sc01.png"></a> <a class="glightbox" href="../images/Sc02.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Alt text" src="../images/Sc02.png"></a></p>
 </details>
 <h2 id="_3">Файлы</h2>
 <ul>
 <li><a href="https://disk.yandex.com/d/TJKstsXMf-yTAw">WoodWOP</a></li>
-</ul>
+</ul></div>
 
 
 
