--- a/RMZ-7D/index.html
+++ b/RMZ-7D/index.html
@@ -824,6 +824,9 @@
     <div class="itc-slider__wrapper">
       <div class="itc-slider__items">
         <div class="itc-slider__item">
+          <a class="glightbox" href="../images/rmz7d/0.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/rmz7d/0.png"></a>
+        </div>
+        <div class="itc-slider__item">
           <a class="glightbox" href="../images/rmz7d/1.jpg" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img loading="lazy" src="../images/rmz7d/1.jpg"></a>
         </div>
         <div class="itc-slider__item">
