--- a/RMZ-7D/index.html
+++ b/RMZ-7D/index.html
@@ -811,7 +811,7 @@
 
 
 <div><h1 id="samach-rmz-7d">SAMACH RMZ 7D</h1>
-<p>Проходной сверлильно-присадочный станок</p>
+<p>Проходной сверлильно-присадочный станок. Пароль: 8033</p>
 <style>
     *,
     *::before,
