--- a/SD2516/index.html
+++ b/SD2516/index.html
@@ -955,6 +955,7 @@
 </ol>
 <h2 id="_2">Минусы</h2>
 <ol>
+<li>Точность +/- 1 мм</li>
 <li>Травмоопасный станок, так как необходимо работать рядом с фрезой</li>
 <li>Вмятины на верхнем листе от прижима</li>
 <li>Фаска на нижнем листе <a href="../blog/img/1.jpg" target="_blank"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24"><path d="m8.5 13.5 2.5 3 3.5-4.5 4.5 6H5m16 1V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2Z"></path></svg></span></a> <a href="../blog/img/2.jpg" target="_blank"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24"><path d="m8.5 13.5 2.5 3 3.5-4.5 4.5 6H5m16 1V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2Z"></path></svg></span></a></li>
