--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -576,7 +576,11 @@
     * Фурнитура Барановичи (adamkovich.leha@yandex.ru, маркетинг, ОТК, гарантийный отдел, цех  и в папку)
     * Фурнитура Коссово (Маркетинг, ОТК, гарантийный отдел, цех и в папку)
   -->
-<!-- ## Образцы заявлений --></div>
+<!-- ## Образцы заявлений -->
+
+<ul>
+<li>поддон с деталями высота от пола 1.7м</li>
+</ul></div>
 
 
 
