--- a/HRB 28-29/index.html
+++ b/HRB 28-29/index.html
@@ -895,7 +895,15 @@
 
 
 <div><h1 id="hold-machinery-hb-2829">HOLD Machinery HB 28/29</h1>
-<p>Всратый 5 сторнний сверлильно-присадочный станок с ЧПУ</p>
+<p>Всратый 5 сторнний сверлильно-присадочный станок с ЧПУ. Пароль: 1111.</p>
+<ul>
+<li>мелкие детали лучше не сверлить</li>
+<li>отличается низкой точностью </li>
+</ul>
+<div class="admonition warning">
+<p class="admonition-title">Предупреждение</p>
+<p>Сверлит зеркально относительно отображаемого</p>
+</div>
 <h2 id="_1">Характеристики</h2>
 <table>
 <thead>
@@ -905,18 +913,6 @@
 </tr>
 </thead>
 <tbody>
-<tr>
-<td style="text-align: left;">Шпиндели для сверления:</td>
-<td style="text-align: left;"></td>
-</tr>
-<tr>
-<td style="text-align: left;">вертикальных отверстий</td>
-<td style="text-align: left;">12 (1 нижняя присадочная  группа)</td>
-</tr>
-<tr>
-<td style="text-align: left;">горизонтальных отверстий</td>
-<td style="text-align: left;">"6 (X 2+2; Y 2)"</td>
-</tr>
 <tr>
 <td style="text-align: left;">Длина заготовки:</td>
 <td style="text-align: left;"></td>
