--- a/HB622GP/index.html
+++ b/HB622GP/index.html
@@ -1279,8 +1279,9 @@
 Производитель: GUANGDONG HOLD MACHINERY CO., LTD<br>
 Товарный знак: HOLD<br>
 Страна происхождения: КИТАЙ<br>
-Страна производства: Китай</p>
-<p><link href="../stylesheets/itc-slider.css" rel="stylesheet"></p>
+Страна производства: Китай
+Сайт: <a href="https://www.holdmac.com/ru/">holdmac.com</a>
+<link href="../stylesheets/itc-slider.css" rel="stylesheet"></p>
 <script src="../javascripts/itc-slider.js" defer></script></div>
 
 
